data/all_generated_tests/raw_wast_tests/call_EdgeCaseFailuresinbr_table_3761.wast
;; 10. **Handling Unreachable Code After 'br_table'**:     - Check if unreachable code following a 'br_table' leading to 'call' is correctly ignored or managed.     - Define a 'br_table' instruction with valid and invalid branches, placing some code tagged unreachable after it.     - Ensures that the unreachable code doesn’t affect the proper handling and execution flow post 'br_table'.

(assert_invalid
  (module
    (func $type-unreachable-after-br_table
      (block $label (br_table $label (i32.const 0)) (call 1 (i32.const 1)))
    )
    (func (param i32))
  )
  "type mismatch"
)